<resources>
    <string name="app_name">Tourist Attractions in Bulgaria</string>
    <string name="title_home">Home</string>
    <string name="districts">Districts</string>
    <string name="attractions">Attractions</string>
    <string name="attraction">Attraction</string>
    <string name="description">Description</string>
    <string name="district">District</string>
    <string name="attractionlist">attractionList</string>
    <string name="district_id">district_id</string>
</resources>