<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.districts.DistrictFragment">

    <TextView
        android:id="@+id/district_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.08"
        android:text="@string/district"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:padding="15dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/district_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.7"
        android:padding="10dp"
        android:textSize="16sp"
        android:scrollbars="vertical"
        android:text="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/district_name"
        app:layout_constraintBottom_toTopOf="@id/attractions_in_district" />

    <TextView
        android:id="@+id/attractions_in_district"
        android:layout_margin="80dp"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attractions"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>